--- a/src/main/resources/com/sprint2/gui/LoginAs.fxml
+++ b/src/main/resources/com/sprint2/gui/LoginAs.fxml
@@ -14,7 +14,7 @@
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button layoutX="460.0" layoutY="146.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" onAction="#onWaiterButton" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #f55e61ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Wait Staff" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="146.0">
+      <Button fx:id="waitButton" layoutX="460.0" layoutY="146.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" onAction="#onWaiterButton" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #f55e61ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Wait Staff" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="146.0">
          <font>
             <Font size="14.0" />
          </font></Button>
