--- a/src/main/resources/com/sprint2/gui/LoginAs.fxml
+++ b/src/main/resources/com/sprint2/gui/LoginAs.fxml
@@ -6,11 +6,11 @@
 
 <AnchorPane fx:id="loginAs" minHeight="450.0" minWidth="700.0" prefHeight="570.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.LoginAsController">
    <children>
-      <Label fx:id="welcomeLabel" layoutX="101.0" layoutY="17.0" prefHeight="65.0" prefWidth="200.0" AnchorPane.topAnchor="17.0">
+      <Label fx:id="welcomeLabel" focusTraversable="false" layoutX="101.0" layoutY="17.0" prefHeight="65.0" prefWidth="200.0" AnchorPane.topAnchor="17.0">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Button fx:id="hostButton" layoutX="102.0" layoutY="146.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #6d9eebff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Host Staff" AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="146.0">
+      <Button fx:id="hostButton" disable="true" layoutX="102.0" layoutY="146.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #6d9eebff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Host Staff" AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="146.0">
          <font>
             <Font size="14.0" />
          </font></Button>
@@ -18,11 +18,11 @@
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="kitchenButton" layoutX="100.0" layoutY="293.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #ffd966ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Kitchen Staff" AnchorPane.leftAnchor="100.0">
+      <Button fx:id="kitchenButton" disable="true" layoutX="100.0" layoutY="293.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #ffd966ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Kitchen Staff" AnchorPane.leftAnchor="100.0">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="busButton" layoutX="460.0" layoutY="293.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #93c47dff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Bus Staff" AnchorPane.rightAnchor="100.0">
+      <Button fx:id="busButton" disable="true" layoutX="460.0" layoutY="293.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #93c47dff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Bus Staff" AnchorPane.rightAnchor="100.0">
          <font>
             <Font size="14.0" />
          </font></Button>
