--- a/src/main/resources/com/sprint2/gui/Orders-view.fxml
+++ b/src/main/resources/com/sprint2/gui/Orders-view.fxml
@@ -21,7 +21,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="readyOrdersTbl" layoutX="230.0" layoutY="29.0" maxHeight="430.0" maxWidth="204.0" minHeight="430.0" minWidth="204.0" prefHeight="430.0" prefWidth="204.0" style="-fx-background-color: #f58f8fff;">
+                  <TableView fx:id="readyOrdersTbl" layoutX="230.0" layoutY="29.0" maxHeight="430.0" maxWidth="204.0" minHeight="430.0" minWidth="204.0" onMouseClicked="#onReadyOrdersClick" prefHeight="430.0" prefWidth="204.0" style="-fx-background-color: #f58f8fff;">
                     <columns>
                       <TableColumn fx:id="readyOrdersNum" maxWidth="124.0" minWidth="73.0" prefWidth="107.20000457763672" sortable="false" text="Order Number" />
                         <TableColumn fx:id="readyOrdersTotal" maxWidth="180.0" minWidth="86.4000244140625" prefWidth="97.60000610351562" sortable="false" text="Total" />
@@ -32,7 +32,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="ordersInProcessTbl" layoutY="29.0" maxHeight="430.0" maxWidth="460.0" minHeight="430.0" minWidth="204.0" prefHeight="430.0" prefWidth="204.0" style="-fx-background-color: #f58f8fff;">
+                  <TableView fx:id="ordersInProcessTbl" layoutY="29.0" maxHeight="430.0" maxWidth="460.0" minHeight="430.0" minWidth="204.0" onMouseClicked="#onInProcessOrdersClick" prefHeight="430.0" prefWidth="204.0" style="-fx-background-color: #f58f8fff;">
                      <columns>
                         <TableColumn fx:id="inProcessOrdersNum" maxWidth="124.0" minWidth="73.0" prefWidth="109.0" sortable="false" text="Order Number" />
                         <TableColumn fx:id="inProcessOrdersTotal" maxWidth="180.0" minWidth="91.0" prefWidth="93.60000610351562" sortable="false" text="Total" />
@@ -52,7 +52,9 @@
       <Button fx:id="goBackBtn" layoutX="531.0" layoutY="538.0" mnemonicParsing="false" onAction="#onGoBackBtn" prefHeight="28.0" prefWidth="61.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" text="Go Back" />
       <Pane fx:id="viewOrderPane" layoutX="627.0" layoutY="6.0" prefHeight="570.0" prefWidth="222.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button fx:id="viewOrderBtn" layoutX="31.0" layoutY="244.0" mnemonicParsing="false" onAction="#onViewOrderBtn" prefHeight="40.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: #af4345; -fx-border-radius: 2px; -fx-border-insets: -1px;" text="View Order" />
+            <Button fx:id="viewOrderBtn" layoutX="30.0" layoutY="160.0" mnemonicParsing="false" onAction="#onViewOrderBtn" prefHeight="40.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: #af4345; -fx-border-radius: 2px; -fx-border-insets: -1px;" text="View Order" />
+            <Button fx:id="markOrderReadyBtn" disable="true" layoutX="30.0" layoutY="245.0" mnemonicParsing="false" onAction="#onMarkOrderReadyBtn" prefHeight="40.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: #af4345; -fx-border-radius: 2px; -fx-border-insets: -1px;" text="Mark Ready" />
+            <Button fx:id="markOrderCompleteBtn" disable="true" layoutX="30.0" layoutY="330.0" mnemonicParsing="false" onAction="#onMarkOrderCompleteBtn" prefHeight="40.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: #af4345; -fx-border-radius: 2px; -fx-border-insets: -1px;" text="Mark Complete" />
          </children></Pane>
       <Label fx:id="waiterLbl" layoutX="432.0" layoutY="5.0" prefHeight="40.0" prefWidth="160.0" text="Label" wrapText="true" />
 
