--- a/src/main/resources/com/sprint2/gui/ProfileEditor.fxml
+++ b/src/main/resources/com/sprint2/gui/ProfileEditor.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -247,11 +248,6 @@
                                                 <Font size="24.0" />
                                              </font>
                                           </TextField>
-                                          <TextField fx:id="passwordField" style="-fx-border-color: #674ea7;" GridPane.columnIndex="1" GridPane.rowIndex="7">
-                                             <font>
-                                                <Font size="24.0" />
-                                             </font>
-                                          </TextField>
                                           <TextField fx:id="salaryField" style="-fx-border-color: #674ea7;" GridPane.columnIndex="1" GridPane.rowIndex="8">
                                              <font>
                                                 <Font size="24.0" />
@@ -267,6 +263,7 @@
                                                 <ChoiceBox fx:id="roleDropdown" layoutX="83.0" layoutY="7.0" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                              </children>
                                           </AnchorPane>
+                                          <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                                        </children>
                                        <BorderPane.margin>
                                           <Insets bottom="15.0" />
