replace commas with semicolon when saving new employee

--- a/src/main/resources/com/sprint2/gui/ManagerScreenSelection.fxml
+++ b/src/main/resources/com/sprint2/gui/ManagerScreenSelection.fxml
@@ -6,8 +6,8 @@
 
 <AnchorPane fx:id="managerScreenSelection" minHeight="450.0" minWidth="700.0" prefHeight="570.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.ManagerScreenSelectionController">
    <children>
-      <Button fx:id="goBackBtn" layoutX="738.0" layoutY="525.0" mnemonicParsing="false" onAction="#goBack" prefHeight="31.0" prefWidth="64.0" text="Go Back" />
-      <GridPane hgap="20.0" layoutX="50.0" layoutY="179.0" prefHeight="290.0" prefWidth="720.0" vgap="20.0" AnchorPane.bottomAnchor="101.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="179.0">
+      <Button fx:id="goBackBtn" layoutX="18.0" layoutY="13.0" mnemonicParsing="false" onAction="#goBack" prefHeight="31.0" prefWidth="64.0" text="Go Back" AnchorPane.bottomAnchor="525.8" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="738.0" AnchorPane.topAnchor="13.0" />
+      <GridPane hgap="20.0" layoutX="50.0" layoutY="203.0" prefHeight="290.0" prefWidth="720.0" vgap="20.0" AnchorPane.bottomAnchor="76.60000000000002" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="203.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -50,7 +50,7 @@
             </Button>
          </children>
       </GridPane>
-      <FlowPane layoutX="50.0" layoutY="22.0" prefHeight="65.0" prefWidth="402.0">
+      <FlowPane layoutX="68.0" layoutY="45.0" prefHeight="65.0" prefWidth="402.0">
          <children>
             <Label prefHeight="65.0" prefWidth="150.0" text="Logged in as">
                <font>
@@ -64,7 +64,7 @@
             </Label>
          </children>
       </FlowPane>
-      <Label alignment="CENTER" layoutX="229.0" layoutY="106.0" prefHeight="65.0" prefWidth="363.0" text="Choose an Action">
+      <Label alignment="CENTER" layoutX="229.0" layoutY="116.0" prefHeight="65.0" prefWidth="363.0" text="Choose an Action">
          <font>
             <Font size="25.0" />
          </font>
