--- a/src/main/resources/com/sprint2/gui/ManagerActivityScreen.fxml
+++ b/src/main/resources/com/sprint2/gui/ManagerActivityScreen.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane minHeight="450.0" minWidth="700.0" prefHeight="570.0" prefWidth="820.0" style="-fx-background-color: b4a7d6;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.ActivityScreenController">
    <children>
@@ -49,9 +45,6 @@
          </padding>
          <bottom>
             <BorderPane BorderPane.alignment="CENTER">
-               <right>
-                  <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#goBack" prefHeight="31.0" prefWidth="64.0" text="Go Back" BorderPane.alignment="CENTER" />
-               </right>
                <left>
                   <Label text="Note: The newest activity logs are shown at the top of the list." BorderPane.alignment="BOTTOM_LEFT">
                      <font>
@@ -68,6 +61,7 @@
             </BorderPane>
          </bottom>
       </BorderPane>
+      <Button alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#goBack" prefHeight="26.0" prefWidth="64.0" text="Go Back" AnchorPane.leftAnchor="18.0" AnchorPane.topAnchor="13.0" />
 
    </children>
 </AnchorPane>
