--- a/src/main/resources/com/sprint2/gui/Orders-view.fxml
+++ b/src/main/resources/com/sprint2/gui/Orders-view.fxml
@@ -12,30 +12,30 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Pane fx:id="viewOrder" layoutX="5.0" layoutY="49.0" prefHeight="513.0" prefWidth="535.0" style="-fx-border-radius: 60px; -fx-background-radius: 60px; -fx-background-color: #f55e61ff;">
+      <Pane fx:id="viewOrder" layoutX="5.0" layoutY="49.0" prefHeight="514.0" prefWidth="578.0" style="-fx-border-radius: 60px; -fx-background-radius: 60px; -fx-background-color: #f55e61ff;" AnchorPane.bottomAnchor="6.600000000000023" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="236.60000000000002" AnchorPane.topAnchor="49.0">
          <children>
             <Group fx:id="activeOrders" layoutX="50.0" layoutY="15.0">
                <children>
-                  <Label fx:id="inProcessOrdersLbl1" layoutX="50.0" text="Orders in process">
+                  <Label fx:id="inProcessOrdersLbl1" layoutX="59.0" text="Orders in process">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="readyOrdersTbl" layoutX="230.0" layoutY="29.0" maxHeight="430.0" maxWidth="204.0" minHeight="430.0" minWidth="204.0" onMouseClicked="#onReadyOrdersClick" prefHeight="430.0" prefWidth="204.0" style="-fx-background-color: #f58f8fff;">
+                  <TableView fx:id="readyOrdersTbl" layoutX="250.0" layoutY="29.0" maxHeight="430.0" maxWidth="254.0" minHeight="430.0" minWidth="204.0" onMouseClicked="#onReadyOrdersClick" prefHeight="430.0" prefWidth="226.0" style="-fx-background-color: #f58f8fff;">
                     <columns>
-                      <TableColumn fx:id="readyOrdersNum" maxWidth="124.0" minWidth="73.0" prefWidth="107.20000457763672" sortable="false" text="Order Number" />
-                        <TableColumn fx:id="readyOrdersTotal" maxWidth="180.0" minWidth="86.4000244140625" prefWidth="97.60000610351562" sortable="false" text="Total" />
+                      <TableColumn fx:id="readyOrdersNum" maxWidth="129.99996948242188" minWidth="73.0" prefWidth="129.99996948242188" sortable="false" text="Order Number" />
+                        <TableColumn fx:id="readyOrdersTotal" maxWidth="180.0" minWidth="76.4000244140625" prefWidth="97.79998779296875" sortable="false" text="Total" />
                     </columns>
                   </TableView>
-                  <Label fx:id="readyOrdersLbl" layoutX="290.0" text="Ready orders">
+                  <Label fx:id="readyOrdersLbl" layoutX="315.0" text="Ready orders">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TableView fx:id="ordersInProcessTbl" layoutY="29.0" maxHeight="430.0" maxWidth="460.0" minHeight="430.0" minWidth="204.0" onMouseClicked="#onInProcessOrdersClick" prefHeight="430.0" prefWidth="204.0" style="-fx-background-color: #f58f8fff;">
+                  <TableView fx:id="ordersInProcessTbl" layoutY="29.0" maxHeight="430.0" maxWidth="460.0" minHeight="430.0" minWidth="204.0" onMouseClicked="#onInProcessOrdersClick" prefHeight="430.0" prefWidth="231.0" style="-fx-background-color: #f58f8fff;">
                      <columns>
-                        <TableColumn fx:id="inProcessOrdersNum" maxWidth="124.0" minWidth="73.0" prefWidth="109.0" sortable="false" text="Order Number" />
-                        <TableColumn fx:id="inProcessOrdersTotal" maxWidth="180.0" minWidth="91.0" prefWidth="93.60000610351562" sortable="false" text="Total" />
+                        <TableColumn fx:id="inProcessOrdersNum" maxWidth="133.99999618530273" minWidth="73.0" prefWidth="133.99999618530273" sortable="false" text="Order Number" />
+                        <TableColumn fx:id="inProcessOrdersTotal" maxWidth="180.0" minWidth="80.40000915527344" prefWidth="95.80000305175781" sortable="false" text="Total" />
                      </columns>
                   </TableView>
                </children>
@@ -49,8 +49,8 @@
                </columns>
             </TableView>
          </children></Pane>
-      <Button fx:id="goBackBtn" layoutX="531.0" layoutY="538.0" mnemonicParsing="false" onAction="#onGoBackBtn" prefHeight="28.0" prefWidth="61.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" text="Go Back" />
-      <Pane fx:id="viewOrderPane" layoutX="627.0" layoutY="6.0" prefHeight="570.0" prefWidth="222.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Button fx:id="goBackBtn" layoutX="14.0" layoutY="11.0" mnemonicParsing="false" onAction="#onGoBackBtn" prefHeight="28.0" prefWidth="61.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" text="Go Back" AnchorPane.bottomAnchor="529.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="743.4" AnchorPane.topAnchor="13.0" />
+      <Pane fx:id="viewOrderPane" layoutX="627.0" layoutY="6.0" prefHeight="570.0" prefWidth="222.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="597.6" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button fx:id="viewOrderBtn" layoutX="30.0" layoutY="160.0" mnemonicParsing="false" onAction="#onViewOrderBtn" prefHeight="40.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: #af4345; -fx-border-radius: 2px; -fx-border-insets: -1px;" text="View Order" />
             <Button fx:id="markOrderReadyBtn" disable="true" layoutX="30.0" layoutY="245.0" mnemonicParsing="false" onAction="#onMarkOrderReadyBtn" prefHeight="40.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: #af4345; -fx-border-radius: 2px; -fx-border-insets: -1px;" text="Mark Ready" />
