--- a/src/main/resources/com/sprint2/gui/ProfileEditor.fxml
+++ b/src/main/resources/com/sprint2/gui/ProfileEditor.fxml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="570.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.ProfileEditorController">
     <children>
@@ -263,7 +253,7 @@
                                                 <ChoiceBox fx:id="roleDropdown" layoutX="83.0" layoutY="7.0" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                              </children>
                                           </AnchorPane>
-                                          <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                          <PasswordField fx:id="passwordField" prefHeight="52.8" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                                        </children>
                                        <BorderPane.margin>
                                           <Insets bottom="15.0" />
